--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "laravel-mix": "^1.4",
     "open-sans-all": "^0.1.2",
     "vue": "^2.5.3",
-    "vue-router": "^3.4.9"
+    "vue-router": "^3.4.9",
+    "vuex": "^3.6.0"
   }
 }
